[package]
name = "mcts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcts"
path = "src/lib.rs"

[[bin]]
name = "mcts"
path = "demo/main.rs"

[dependencies]
nimlib = "0.1.1"
rand = "0.8.5"
rayon = "1.8.1"
color-backtrace = "0.6.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
nonempty = "0.9.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.4"
rustc-hash = "1.1.0"

[profile.release]
debug=true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ttt"
harness = false
