[package]
name = "mcts"
version = "0.1.0"
edition = "2021"
default-run = "mcts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.profiling]
inherits = "release"
debug = true

[lib]
name = "mcts"
path = "src/lib.rs"

[[bin]]
name = "mcts"
path = "demo/main.rs"

[[bin]]
name = "druid"
path = "demo/druid.rs"

[dependencies]
nimlib = "0.1.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.1"
color-backtrace = "0.6.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
nonempty = "0.9.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.4"
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
backtrace = "0.3.69"

[profile.release]
debug=true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ttt"
harness = false
